# event-driven-architecture

./: .gitignore  model.py  pyproject.toml  test_allocate.py  test_batches.py
