[tool.poetry]
name = "event_driven_arch"
version = "0.1.0"
description = ""
authors = ["Tristan Bester <tristanbester@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
